--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.hibernate.ddl-auto= update
 spring.h2.console.enabled=true
 # default path: h2-console
 spring.h2.console.path=/h2-ui
+
+# Muestra detalles de la salud del end point
+management.endpoint.health.show-details=always
